# scanner

./: .Doxyfile  .buildinfo  .clang-format  .gdbinit  .gitignore  .scanner.example.toml  .travis.yml  BUILD.md  CMakeLists.txt  CNAME  Dockerfile  INSTALL.md  README.md  TUTORIAL.md  about.html  annotated.html  api.html  build.sh  classes.html  classpython_1_1scannerpy_1_1bulk__job_1_1BulkJob-members.html  classpython_1_1scannerpy_1_1bulk__job_1_1BulkJob.html  classpython_1_1scannerpy_1_1bulk__job_1_1BulkJob__coll__graph.map  classpython_1_1scannerpy_1_1bulk__job_1_1BulkJob__inherit__graph.md5  classpython_1_1scannerpy_1_1collection_1_1Collection-members.html  classpython_1_1scannerpy_1_1collection_1_1Collection.html  classpython_1_1scannerpy_1_1column_1_1Column-members.html  classpython_1_1scannerpy_1_1column_1_1Column.html  classpython_1_1scannerpy_1_1column_1_1Column__coll__graph.md5  classpython_1_1scannerpy_1_1column_1_1Column__inherit__graph.map  classpython_1_1scannerpy_1_1common_1_1ColumnType-members.html  classpython_1_1scannerpy_1_1common_1_1ColumnType.html  classpython_1_1scannerpy_1_1common_1_1ColumnType__coll__graph.map  classpython_1_1scannerpy_1_1common_1_1ColumnType__inherit__graph.md5  classpython_1_1scannerpy_1_1common_1_1DeviceHandle-members.html  classpython_1_1scannerpy_1_1common_1_1DeviceHandle.html  classpython_1_1scannerpy_1_1common_1_1DeviceHandle__coll__graph.map  classpython_1_1scannerpy_1_1common_1_1DeviceHandle__inherit__graph.md5  classpython_1_1scannerpy_1_1common_1_1DeviceType-members.html  classpython_1_1scannerpy_1_1common_1_1DeviceType.html  classpython_1_1scannerpy_1_1common_1_1DeviceType__coll__graph.md5  (+405 more)
comparison/caffe/: CMakeLists.txt  main.cpp
comparison/kernel_sol/: CMakeLists.txt  main.cpp
comparison/ocv_decode/: CMakeLists.txt  main.cpp
comparison/opencv/: CMakeLists.txt  main.cpp
comparison/peak/: CMakeLists.txt  main.cpp  peak_video_decoder.cpp  peak_video_decoder.h
comparison/standalone/: CMakeLists.txt  main.cpp
kernels/: CMakeLists.txt  blur_kernel_cpu.cpp  caffe_input_kernel.cpp  caffe_input_kernel.h  caffe_input_kernel_cpu.cpp  caffe_input_kernel_gpu.cpp  caffe_kernel.cpp  caffe_kernel.h  caffe_kernel_cpu.cpp  caffe_kernel_gpu.cpp  cpm2_input_kernel_gpu.cpp  cpm2_kernel.cpp  cpm2_output_kernel_cpu.cpp  facenet_input_kernel_gpu.cpp  facenet_kernel.cpp  facenet_output_kernel_cpu.cpp
lightscan/storage/: CMakeLists.txt  database_backend.cpp  database_backend.h  database_config.cpp  database_config.h  disk_database.cpp  disk_database.h  disk_storage.cpp  disk_storage.h  gcs_storage.cpp  gcs_storage.h  seq_tables.h  storage_backend.cpp  storage_backend.h  storage_config.cpp  storage_config.h
scanner/engine/: CMakeLists.txt  build_flags.in.cpp  column_enumerator.cpp  column_enumerator.h  column_sink.cpp  column_sink.h  column_source.cpp  column_source.h  dag_analysis.cpp  dag_analysis.h  db.cpp  db.h  db.in.cpp  db.old.cpp  enumerator_factory.h  enumerator_registry.cpp  enumerator_registry.h  evaluate_worker.cpp  evaluate_worker.h  evaluate_worker.old.cpp  evaluator_info.h  evaluator_registry.cpp  evaluator_registry.h  halide_context.h  ingest.cpp  ingest.h  kernel_factory.h  kernel_registry.cpp  kernel_registry.h  load_worker.cpp  load_worker.h  load_worker.old.cpp  master.cpp  master.h  master_scheduler.cpp  master_scheduler.h  metadata.cpp  metadata.h  op_info.h  op_registry.cpp  (+38 more)
scanner/evaluators/: CMakeLists.txt  serialize.h  types.proto
scanner/kernels/: CMakeLists.txt  args.proto  blur_kernel.cpp  blur_kernel.h  blur_kernel_cpu.cpp  caffe_input_kernel.cpp  caffe_input_kernel.h  caffe_input_kernel_cpu.cpp  caffe_input_kernel_gpu.cpp  caffe_kernel.cpp  caffe_kernel.h  caffe_kernel_cpu.cpp  caffe_kernel_gpu.cpp  cpm2_input_kernel_gpu.cpp  cpm2_kernel.cpp  cpm2_output_kernel_cpu.cpp  facenet_input_kernel_gpu.cpp  facenet_kernel.cpp  facenet_output_kernel.cpp  facenet_output_kernel_cpu.cpp  histogram_kernel.cpp  histogram_kernel_cpu.cpp  histogram_kernel_gpu.cpp  image_encoder_kernel.cpp  image_encoder_kernel_cpu.cpp  optical_flow_kernel.cpp  optical_flow_kernel_cpu.cpp  optical_flow_kernel_gpu.cpp
scanner/pipelines/: CMakeLists.txt  cpm2_pipeline.cpp  dnn_rate_pipeline.cpp  effective_decode_rate_pipeline.cpp  effective_io_rate_pipeline.cpp  facenet_pipeline.cpp  find_body_pipeline.cpp  find_person_pipeline.cpp  find_pose_pipeline.cpp  frame_extract_pipeline.cpp  histogram_pipeline.cpp  image_decode_rate_pipeline.cpp  kcam_box_reader.cpp  kcam_pipeline.cpp  knn_patches_pipeline.cpp  knn_pipeline.cpp  median_pipeline.cpp  multi_decode_pipeline.cpp  opticalflow_pipeline.cpp  simple_pipeline.cpp  tracker_pipeline.cpp  video_explode_pipeline.cpp
scanner/util/: CMakeLists.txt  bbox.cpp  bbox.h  blockingconcurrentqueue.h  caffe.cpp  caffe.h  common.cpp  common.h  cuda.h  cycle_timer.h  db.cpp  db.h  ffmpeg.cpp  ffmpeg.h  fs.cpp  fs.h  glog.cpp  glog.h  grpc.h  h264.h  halide.h  halide_context.cpp  halide_context.h  image.cu  image.h  image_encoder.cpp  json.hpp  jsoncpp.h  memory.cpp  memory.h  opencv.cpp  opencv.cu  opencv.h  profiler.cpp  profiler.h  profiler.inl  progress_bar.cpp  progress_bar.h  queue.h  queue.inl  (+7 more)
scanner/video/: #video_decoder.cpp#  CMakeLists.txt  (+12 more)
stdlib/: CMakeLists.txt  args.proto  blur_kernel_cpu.cpp  caffe_input_kernel.cpp  caffe_input_kernel.h  caffe_input_kernel_cpu.cpp  caffe_input_kernel_gpu.cpp  caffe_input_transformer_cpu.cpp  caffe_input_transformer_gpu.cpp  caffe_kernel.cpp  caffe_kernel.h  caffe_kernel_cpu.cpp  caffe_kernel_gpu.cpp  cpm2_input_kernel_gpu.cpp  cpm2_kernel.cpp  cpm2_output_kernel_cpu.cpp  facenet_input_kernel_gpu.cpp  facenet_kernel.cpp  facenet_output_kernel_cpu.cpp  histogram_kernel.cpp  histogram_kernel_gpu.cpp  image_encoder_kernel_cpu.cpp  stdlib.proto
tests/: CMakeLists.txt  conftest.py  cpp_test.cpp  decode.cpp  ffmpeg_test.cpp  py_test.py  pytest.ini  scheduler_test.py  simple.cpp  spawn_worker.py  test_ops.cpp  test_ops.proto  test_py_batch_kernel.py  test_py_fail_kernel.py  test_py_kernel.py  test_realtime.py  test_realtime_kernel.py  tests.cpp  videos.h
(+1245 files in other folders)
